# Otus_sudoku

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
app/: CMakeLists.txt  README.md  app.cpp  console_utils.cpp  console_utils.h  sudokuIO.h  sudoku_io.h  sudoku_ui.cpp  sudoku_ui.h
docs/: SRC.md
docs/doxygen/html/: annotated.html  annotated_dup.js  app_8cpp.html  class_dancing_links_matrix-members.html  class_dancing_links_matrix.html  class_dancing_links_matrix.js  class_sudoku_solver-members.html  class_sudoku_solver.html  class_sudoku_solver.js  class_test_runner-members.html  class_test_runner.html  class_test_runner.js  classes.html  concept_valid_sudoku_size.html  concepts.html  concepts.js  console__utils_8cpp.html  console__utils_8cpp.js  console__utils_8h.html  console__utils_8h.js  console__utils_8h_source.html  dancing__links__matrix_8cpp.html  dancing__links__matrix_8cpp.js  dancing__links__matrix_8h.html  dancing__links__matrix_8h.js  dancing__links__matrix_8h_source.html  dir_1949597cc6bdb8d9db336893806f5ab6.html  dir_1949597cc6bdb8d9db336893806f5ab6.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_67b3fed839f44d9131aa6c50e339d352.html  dir_67b3fed839f44d9131aa6c50e339d352.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6d19875aa2e31bf7b2f2c58d7bc22d22.html  dir_6d19875aa2e31bf7b2f2c58d7bc22d22.js  dir_c5c571bd37a5aa5028f57c40ec190062.html  dir_c5c571bd37a5aa5028f57c40ec190062.js  dir_c88a8104c9845e67e94028b0f85a444d.html  dir_c88a8104c9845e67e94028b0f85a444d.js  (+50 more)
docs/doxygen/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+9 more)
include/dancing_links/: dancing_links_matrix.h
include/sudoku/: sudoku_solver.h
src/: main.cpp
src/dancing_links/: dancing_links_matrix.cpp
tests/: CMakeLists.txt  README.md  test_dancing_links.cpp  test_utils.h
tests/dancing_links/: test_dancing_links.cpp
tests/sudoku/: test_sudoku.cpp  test_sudoku_utils.h
